--- a/EECIP/Views/Account/UserProfile.cshtml
+++ b/EECIP/Views/Account/UserProfile.cshtml
@@ -147,7 +147,8 @@
             //function to initiate Select2
             $(".search-select").select2({
                 placeholder: "Select expertise",
-                allowClear: true
+                allowClear: true,
+                tags: true
             });
         });
     </script>
