--- a/EECIP/Views/Dashboard/Index.cshtml
+++ b/EECIP/Views/Dashboard/Index.cshtml
@@ -16,7 +16,7 @@
                 <span class="glyphicon glyphicon-remove"></span>
             </a>
         </span>
-        @Html.TextBoxFor(model => model.searchStr, new { @class = "form-control", @id = "txtSearch", @placeholder = "...enter search terms here" })
+        @Html.TextBoxFor(model => model.searchStr, new { @class = "form-control", @id = "txtSearch", @name = "txtSearch", @placeholder = "...enter search terms here" })
         <span class="input-group-btn">
             <button class="btn btn-success" type="submit">
                 <i class="clip-search-2"> </i>Search
@@ -24,7 +24,6 @@
         </span>
     </div>
 }
-<a href="#">Advanced Search</a>
 @if (Model.searchResults != null)
 {
         <div>
@@ -33,7 +32,7 @@
                 <h4>@Html.DisplayFor(modelItem => item.Key)</h4>
                 foreach (var subitem in item.Value)
                 {
-                    <div>@Html.DisplayFor(modelItem => subitem.Value) ( )</div>
+                    <div>@Html.DisplayFor(modelItem => subitem.Value) (@Html.DisplayFor(modelItem => subitem.Count))</div>
                 }
             }
         </div>
@@ -45,25 +44,44 @@
         <div class="table-responsive">
             <table class="table table-striped m-b-none" data-ride="datatables">
                 <tr>
-                    <th></th>
                     <th>Type</th>
+                    <th>Agency</th>
                     <th>Name</th>
                     <th>Description</th>
                     <th>Record Source</th>
                     <th>Media</th>
-                    <th>Start Year</th>
                     <th>Status</th>
+                    <th>Tags</th>
                     <th>Score</th>
                 </tr>
 
                 @foreach (var item in Model.searchResults.Results)
                 {
                     <tr>
-                        <td style="min-width: 68px;">
-                            <a href="#modal-form" class="btn btn-rounded btn-xs btn-info modal-it" data-toggle="modal"><i class="clip-info"></i></a>
+                        <td>
+                            @if (item.Document.DataType == "Project")
+                            {
+                                <a href="@Url.Action("ProjectCard","Dashboard", new { strid=item.Document.KeyID })" class="label label-green" style="padding-top:15px !important; padding-bottom: 15px !important; padding-left: 5px !important; padding-right: 5px !important; display:inline-block; width:65px;"><i class="clip-info"></i> Project</a>
+                            }
+                            @if (item.Document.DataType == "Agency")
+                            {
+                                <a href="@Url.Action("AgencyCard","Dashboard", new { strid=item.Document.KeyID })" class="label label-primary" style="padding-top:15px !important; padding-bottom: 15px !important; padding-left: 5px !important; padding-right: 5px !important; display:inline-block; width:65px;"><i class="clip-info"></i> Agency</a>
+                            }
+                            @if (item.Document.DataType == "Enterprise Service")
+                            {
+                                <a href="@Url.Action("EnterpriseSvcCard","Dashboard", new { strid=item.Document.KeyID })" class="label label-orange" style="padding-top:15px !important; padding-bottom: 15px !important; padding-left: 5px !important; padding-right: 5px !important; display:inline-block; width:65px;">Enterprise <br />Service</a>
+                            }
+                            @if (item.Document.DataType == "User")
+                            {
+                                <a href="@Url.Action("UserCard","Dashboard", new { strid=item.Document.KeyID })" class="label label-yellow" style="padding-top:15px !important; padding-bottom: 15px !important; padding-left: 5px !important; padding-right: 5px !important; display:inline-block; width:65px;"><i class="clip-user"></i> Person</a>
+                            }
+                            @if (item.Document.DataType == "Discussion")
+                            {
+                                <a href="@Url.Action("Index","Forum", new { strid=item.Document.KeyID })" class="label label-purple" style="padding-top:15px !important; padding-bottom: 15px !important; padding-left: 5px !important; padding-right: 5px !important; display:inline-block; width:65px;">Discussion</a>
+                            }
                         </td>
                         <td>
-                            <span class="label label-beige">@Html.DisplayFor(modelItem => item.Document.DataType)</span>
+                            @Html.DisplayFor(modelItem => item.Document.Agency)
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Document.Name)
@@ -78,8 +96,13 @@
                             @Html.DisplayFor(modelItem => item.Document.Media)
                         </td>
                         <td>
+
                         </td>
                         <td>
+                            @foreach (string tag in item.Document.Tags)
+                            {
+                                <span class="select2-selection__choice">@Html.DisplayFor(modelItem => tag)</span>
+                            }
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.Score)
@@ -94,6 +117,7 @@
 </div>
 
 @section Scripts {
+    @Scripts.Render("~/bundles/autocomplete")
 
     <script type="text/javascript">
         $(document).ready(function () {
@@ -101,6 +125,17 @@
             if ($("#txtSearch").val().length > 0) {
                 $('body').addClass("navigation-small");
             }
+
+            //autocomplete
+            new autoComplete({
+                selector: 'input[name="searchStr"]',
+                source: function (term, response) {
+                    $.getJSON('/Admin/SearchAdminSuggest/', { term: term }, function (data) { response(data); });
+                }
+            });
+
+
+
         });
     </script>
 }
