--- a/EECIP/Views/Home/Index.cshtml
+++ b/EECIP/Views/Home/Index.cshtml
@@ -12,16 +12,16 @@
                 <img src="~/Content/Images/front-logo.png" class="img-responsive animate-if-visible" data-animation-options='{"animation":"tada", "duration":"600"}'/>
             </div>
             <div class="col-sm-6">
-                <h2 style="color:#199C98">e-Enterprise Community Inventory Platform</h2>
+                <h2 style="color:#199C98">E-Enterprise Community Inventory Platform</h2>
                 <hr class="fade-right">
                 <p>
-                    Lid est laborum dolo rumes fugats untras. Etha rums ser quidem rerum facilis dolores nemis onis fugats vitaes nemo minima rerums unsers sadips amets.
+                    The E-Enterprise Community Inventory Platform provides an online inventory of agency profiles for the state, tribal, and territorial partners of E-Enterprise.                     
                 </p>
                 <p>
-                    Ut enim ad minim veniam, quis nostrud Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci amets uns.
+                    This site contains a broad scope of information, including partner agencies’ information technology infrastructure, data exchange nodes and flows, process improvement efforts, and other program modernizations (e.g. advanced monitoring). 
                 </p>
                 <p>
-                    Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips ameet quasi architecto beatae vitae dicta sunt explicabo.
+                    This allows the E-Enterprise community of co-regulators to have a more complete understanding of their partner agencies’ plans, priorities, and constraints, and to plan and collaborate more strategically across agencies.
                 </p>
                 <hr class="fade-right">
                 <a class="btn btn-success" href="@Url.Action("Login","Account")" style="margin-right:30px;"><i class="clip-arrow-right"></i> Log In</a>
@@ -38,43 +38,37 @@
             <div class="col-sm-4">
                 <div class="core-box">
                     <div class="heading">
-                        <i class="clip-mobile circle-icon"></i>
-                        <h2 style="color:#199C98">Feature 1</h2>
+                        <i class="clip-search circle-icon"></i>
+                        <h2 style="color:#199C98">Advanced Search</h2>
                     </div>
                     <div class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        EECIP includes advanced search techniques such as synonym matching (e.g. 303D = ATTAINS), full document text searching, and search suggestions.
                     </div>
-                    <a class="view-more" href="#">
-                        View More <i class="fa fa-angle-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="core-box">
                     <div class="heading">
-                        <i class="clip-clip circle-icon"></i>
-                        <h2 style="color:#199C98">Feature 2</h2>
+                        <i class="clip-question-2 circle-icon"></i>
+                        <h2 style="color:#199C98">Ask & Answer Questions</h2>
                     </div>
                     <div class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        Ask questions in the community forum and gain access to assistance from other in the community.
                     </div>
-                    <a class="view-more" href="#">
-                        View More <i class="fa fa-angle-right"></i>
-                    </a>
                 </div>
             </div>
             <div class="col-sm-4">
                 <div class="core-box">
                     <div class="heading">
-                        <i class="clip-cogs circle-icon"></i>
-                        <h2 style="color:#199C98">Feature 3</h2>
+                        <i class="clip-heart-2 circle-icon"></i>
+                        <h2 style="color:#199C98">Help & Be Recognized</h2>
                     </div>
                     <div class="content">
-                        Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
+                        Gain recognition by helping fellow community members by earning badges for a variety of activities.
                     </div>
-                    <a class="view-more" href="#">
+                    @*<a class="view-more" href="#">
                         View More <i class="fa fa-angle-right"></i>
-                    </a>
+                    </a>*@
                 </div>
             </div>
         </div>
