--- a/EECIP/Views/Shared/_Layout.cshtml
+++ b/EECIP/Views/Shared/_Layout.cshtml
@@ -143,10 +143,7 @@ else
             <a href="">Terms & Conditions </a>
         </div>
         <div class=" footer-items footer-right">
-            <a href="">Contact</a> |
-        </div>
-        <div class="footer-items footer-right">
-            <a href="">About</a> |
+            <a href="https://e-enterprisefortheenvironment.net/our-projects/shared-services-projects/ee_inventory/" target="_blank">Contact | About</a> |
         </div>
     </div>
     <!-- end: FOOTER -->
