--- a/EECIP/Views/Dashboard/Index.cshtml
+++ b/EECIP/Views/Dashboard/Index.cshtml
@@ -58,8 +58,8 @@
 @Html.HiddenFor(model => model.facetRecordSource)
 @Html.HiddenFor(model => model.facetAgency)
 @Html.HiddenFor(model => model.facetTags)
-
 @Html.HiddenFor(model => model.activeTab)
+@Html.HiddenFor(model => model.currentPage)
 
 <div class="row">
     @if (Model.searchResults != null) {
@@ -97,22 +97,28 @@
                     }
                     </a>
                 </li>
-                <li><a href="#tab3" data-toggle="tab">People
+                <li><a href="#tab3" data-toggle="tab">Enterprise Services
+    @if (Model.searchResults != null && Model.searchResults.Facets != null && Model.searchResults.Facets.FirstOrDefault(c => c.Key == "DataType").Value.FirstOrDefault(d => d.Value.ToString() == "Enterprise Service") != null)
+    {
+        <span class="badge badge-eecip-bluegreen">@Model.searchResults.Facets.FirstOrDefault(c => c.Key == "DataType").Value.FirstOrDefault(d => d.Value.ToString() == "Enterprise Service").Count</span>
+    }
+</a></li>
+                <li><a href="#tab4" data-toggle="tab">People
                         @if (Model.searchResults != null && Model.searchResults.Facets != null && Model.searchResults.Facets.FirstOrDefault(c => c.Key == "DataType").Value.FirstOrDefault(d => d.Value.ToString() == "User") != null)
                         {
                             <span class="badge badge-eecip-bluegreen">@Model.searchResults.Facets.FirstOrDefault(c => c.Key == "DataType").Value.FirstOrDefault(d => d.Value.ToString() == "User").Count</span>
                         }
                     </a>
                 </li>
-                <li><a href="#tab4" data-toggle="tab">Agencies
+                <li><a href="#tab5" data-toggle="tab">Agencies
                         @if (Model.searchResults != null && Model.searchResults.Facets != null && Model.searchResults.Facets.FirstOrDefault(c => c.Key == "DataType").Value.FirstOrDefault(d => d.Value.ToString() == "Agency") != null)
                         {
                             <span class="badge badge-eecip-bluegreen">@Model.searchResults.Facets.FirstOrDefault(c => c.Key == "DataType").Value.FirstOrDefault(d => d.Value.ToString() == "Agency").Count</span>
                         }
                     </a>
                 </li>
-                <li><a href="#tab5" data-toggle="tab">Governance</a></li>
-                <li><a href="#tab6" data-toggle="tab">Discussion</a></li>
+                <li><a href="#tab6" data-toggle="tab">Governance</a></li>
+                <li><a href="#tab7" data-toggle="tab">Discussion</a></li>
                 <li class="pull-right"><a href="#" style="background-color: #FFF; border: 0px; font-weight: bold; font-size: 11px;">Record Count: @(Model.searchResults != null ? Model.searchResults.Count : 0)</a></li>
             </ul>
             <div class="tab-content" style="height:0px; padding: 0px;">
@@ -280,16 +286,7 @@
 
     <script type="text/javascript">
 
-        $(function () {
-            var obj = $('#pagination').twbsPagination({
-                totalPages: 35,
-                visiblePages: 10,
-                onPageClick: function (event, page) {
-                    console.info(page);
-                }
-            });
-            console.info(obj.data());
-        });
+
         //var businessTitleFacet, postingTypeFacet, salaryRangeFacet, sortType, currentPage;
 
         //function Search() {
@@ -325,6 +322,17 @@
         //    }
         //}
 
+
+        $(function () {
+            var _totalRec = @(Model.searchResults != null ? Model.searchResults.Count : 1);
+            var _totalPages = Math.round(_totalRec / 50) + 1;
+            var obj = $('#pagination').twbsPagination({
+                totalPages: _totalPages,
+                visiblePages: 10,
+                startPage: @Model.currentPage
+            });
+        });
+
         $(document).ready(function () {
             //focus on search bar
             $('#txtSearch').focus();
@@ -342,31 +350,42 @@
                 }
             });
 
-            
+
             //tab handling
             $('.nav-tabs a[href="#tab' + $('#activeTab').val() + '"]').tab('show');             //do proper tab display from postback
 
             $('a[href="#tab1"]').on('shown.bs.tab', function (e) {
                 $('#facetDataType').val('');
                 $('#activeTab').val('1');
+                $('#currentPage').val(1);
                 $('#norepostform').submit();
             });
 
             $('a[href="#tab2"]').on('shown.bs.tab', function (e) {
                 $('#facetDataType').val('Project');
                 $('#activeTab').val('2');
+                $('#currentPage').val(1);
                 $('#norepostform').submit();
             });
 
             $('a[href="#tab3"]').on('shown.bs.tab', function (e) {
-                $('#facetDataType').val('User');
+                $('#facetDataType').val('Enterprise Service');
                 $('#activeTab').val('3');
+                $('#currentPage').val(1);
                 $('#norepostform').submit();
             });
 
             $('a[href="#tab4"]').on('shown.bs.tab', function (e) {
-                $('#facetDataType').val('Agency');
+                $('#facetDataType').val('User');
                 $('#activeTab').val('4');
+                $('#currentPage').val(1);
+                $('#norepostform').submit();
+            });
+
+            $('a[href="#tab5"]').on('shown.bs.tab', function (e) {
+                $('#facetDataType').val('Agency');
+                $('#activeTab').val('5');
+                $('#currentPage').val(1);
                 $('#norepostform').submit();
             });
 
@@ -385,6 +404,7 @@
 
                 //$('#facetDataType').val('Project');
                 //$('#activeTab').val('2');
+                $('#currentPage').val(1);
                 $('#norepostform').submit();
             });
 
@@ -392,16 +412,35 @@
                 e.preventDefault();
                 var _facTyp = $(this).attr('data-id2');
 
-                if (_facTyp == "Media") 
+                if (_facTyp == "Media")
                     $('#facetMedia').val('');
-                if (_facTyp == "Record_Source") 
+                if (_facTyp == "Record_Source")
                     $('#facetRecordSource').val('');
-                if (_facTyp == "Agency") 
+                if (_facTyp == "Agency")
                     $('#facetAgency').val('');
-                if (_facTyp == "Tags") 
+                if (_facTyp == "Tags")
                     $('#facetTags').val('');
 
+                $('#currentPage').val(1);
                 $('#norepostform').submit();
+            });
+
+
+            //pagination handling
+            $('.page-item a').click(function (e) {
+                var txt = $(e.target).text();
+                if (txt == 'Next')
+                    $('#currentPage').val($('#currentPage').val() + 1);
+                else if (txt == 'Previous')
+                    $('#currentPage').val($('#currentPage').val() - 1);
+                else if (txt == 'First')
+                    $('#currentPage').val(1);
+                else if (txt == 'Last')
+                    $('#currentPage').val($('#currentPage').val() + 1);
+                else
+                    $('#currentPage').val(txt);
+                $('#norepostform').submit();
+                return false;
             });
 
             //function UpdateFacets(data) {
