--- a/EECIP/Views/Shared/_LeftMenu.cshtml
+++ b/EECIP/Views/Shared/_LeftMenu.cshtml
@@ -26,12 +26,12 @@
             <ul class="sub-menu">
                 <li class="@Html.ActivePage("Account", "UserProfile")">
                     <a href="@Url.Action("UserProfile", "Account", new { id = db_Accounts.GetUserIDX() })">
-                        <span class="title">My User Profile </span>
+                        <span class="title">User Profile </span>
                     </a>
                 </li>
                 <li class="@Html.ActivePage("Dashboard", "Agency")">
                     <a href="@Url.Action("Agency", "Dashboard")">
-                        <span class="title">My Agency Profile </span>
+                        <span class="title">Agency Profile </span>
                     </a>
                 </li>
                 <li class="@Html.ActivePage("Dashboard", "Projects")">
