--- a/EECIP/Content/Site.css
+++ b/EECIP/Content/Site.css
@@ -262,3 +262,143 @@ ul.main-navigation-menu > li.active > a .selected:before {
 }
 
 
+/************************ USER CARD STYLING  ******************/
+.aligned-row {
+    display: flex;
+    flex-flow: row wrap;
+    &::before
+
+{
+    display: block;
+}
+
+}
+
+
+
+.circle-tile {
+    margin-bottom: 15px;
+    text-align: center;
+}
+.circle-tile-heading {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    margin: 0 auto -40px;
+    border: 3px solid rgba(200,200,200,1);
+    border-radius: 10px;
+    color: #fff;
+    transition: all ease-in-out .3s;
+    background-size: 75px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color: #333;
+}
+
+    .circle-tile-heading:hover {
+        background-size: 80px;
+    }
+
+    .circle-tile-heading .fa {
+        line-height: 80px;
+    }
+
+.circle-tile-content {
+    padding-top: 50px;
+    border-radius: 8px
+}
+
+/*.circle-tile-description {
+    text-transform: uppercase;
+}*/
+
+.circle-tile-title {
+    margin: 0;
+    padding: 5px;
+}
+
+.circle-tile-buttons {
+    margin-bottom: 10px;
+}
+
+    .circle-tile-buttons > a {
+        font-size: 12px;
+    }
+
+.text-faded {
+    color: rgba(255,255,255,0.7);
+}
+
+.circle-tile-number {
+    padding: 5px 0 5px;
+    font-size: 26px;
+    font-weight: 700;
+    line-height: 1;
+}
+
+.circle-tile-footer {
+    display: block;
+    padding: 5px;
+    color: rgba(255,255,255,0.5);
+    background-color: rgba(0,0,0,0.1);
+    transition: all ease-in-out .3s;
+    border-radius: 0 0 8px 8px;
+}
+
+    .circle-tile-footer:hover {
+        text-decoration: none;
+        color: rgba(255,255,255,0.5);
+        background-color: rgba(0,0,0,0.4);
+    }
+
+.dark-blue {
+    background-color: #34495e;
+}
+
+.green {
+    background-color: #16a085;
+}
+
+.orange {
+    background-color: #f39c12;
+}
+
+.blue {
+    background-color: #2980b9;
+}
+
+.red {
+    background-color: #e74c3c;
+}
+
+.purple {
+    background-color: #8e44ad;
+}
+
+/* -- Text Color Helper Classes */
+
+.text-dark-blue {
+    color: #34495e;
+}
+
+.text-green {
+    color: #16a085;
+}
+
+.text-orange {
+    color: #f39c12;
+}
+
+.text-blue {
+    color: #2980b9;
+}
+
+.text-red {
+    color: #e74c3c;
+}
+
+.text-purple {
+    color: #8e44ad;
+}
+
+
